# jsonalias

./: .gitignore  CHANGELOG.md  README.md  example.py  pyproject.toml
jsonalias/: __init__.py
