[tool.poetry]
name = "jsonalias"
version = "0.1.0"
description = "A microlibrary that defines a Json type alias for Python."
authors = ["Kevin Heavey <ID+username@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
black = "^22.10.0"

[tool.mypy]
enable_recursive_aliases = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
